Bug 164822 - Okular cannot display XPS files created by Windows XP
Summary: Okular cannot display XPS files created by Windows XP
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: XPS backend (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-24 15:01 UTC by David Dempster
Modified: 2009-02-25 16:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
XPS "print-out" of the kde.org home page (will not open in Okular) (126.39 KB, application/vnd.ms-xpsdocument)
2008-06-24 15:03 UTC, David Dempster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Dempster 2008-06-24 15:01:15 UTC
Version:            (using KDE 4.0.80)
Installed from:    Ubuntu Packages
OS:                Linux

Using the "Microsoft XPS Document Writer", which is a virtual printer on Windows XP, I can "print" any printable thing to an XPS file instead of to a printer.  On Linux I can do the same with PS and PDF.

Okular is not able to open the XPS files I generate from Windows XP.  I imagine it can't view any XPS files.  Blank pages are displayed.  There are no error messages.

Presumably the problem is in the XPS backend by Brad Hards and Jiri Klement.

I'll attach an XPS of the http://kde.org home page.
Comment 1 David Dempster 2008-06-24 15:03:06 UTC
Created attachment 25565 [details]
XPS "print-out" of the kde.org home page (will not open in Okular)
Comment 2 Brad Hards 2008-06-24 23:04:01 UTC
The XPS backend does work for some files, just has serious font problems.

Perhaps we should disable/remove it?
Comment 3 Pino Toscano 2008-06-27 03:00:07 UTC
SVN commit 824976 by pino:

Width and height of a page can be real values, not just integer.

BUG: 164822


 M  +4 -4      generator_xps.cpp  
 M  +2 -2      generator_xps.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=824976
Comment 4 Brad Hards 2008-06-27 12:30:28 UTC
Thanks Pino