Width and height of a page can be real values, not just integer.

BUG: 164822

svn path=/trunk/KDE/kdegraphics/okular/; revision=824976